--- a/RAG/simple_rag.ipynb
+++ b/RAG/simple_rag.ipynb
@@ -26,20 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "3e20697a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import ( TextLoader , WebBaseLoader , PyPDFLoader)\n",
-    "\n",
-    "\"\"\"Module for document loaders from various sources.\n",
-    "\n",
-    "This module provides classes for loading documents from different sources:\n",
-    "- Text files (TextLoader)\n",
-    "- Web pages (WebBaseLoader)\n",
-    "- PDF files (PyPDFLoader)\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e23b84ec",
    "metadata": {},
    "outputs": [
@@ -86,14 +79,7 @@
     "import bs4\n",
     "\n",
     "def load_web_documents():\n",
-    "    \"\"\"Load and parse specific sections from a webpage using WebBaseLoader.\n",
-    "    \n",
-    "    Returns:\n",
-    "        List[Document]: A list of Document objects containing parsed content from:\n",
-    "            - post-title (article title)\n",
-    "            - post-content (main article content)\n",
-    "            - post-header (article header/metadata)\n",
-    "    \"\"\"\n",
+    "\n",
     "    loader = WebBaseLoader(\n",
     "        web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
     "        bs_kwargs=dict(\n",
@@ -110,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f80d4d71",
    "metadata": {},
    "outputs": [
@@ -142,7 +128,6 @@
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "\n",
-    "# Load PDF document using PyPDFLoader\n",
     "loader = PyPDFLoader(\"attention.pdf\")\n",
     "pdf_documents = loader.load()\n",
     "pdf_documents"
@@ -196,23 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "147ddaff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "\"\"\"Module for text splitting functionality using RecursiveCharacterTextSplitter.\n",
-    "\n",
-    "This module provides access to the RecursiveCharacterTextSplitter class from langchain,\n",
-    "which is used for splitting text into smaller chunks based on character boundaries.\n",
-    "\"\"\""
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "03736b4a",
    "metadata": {},
    "outputs": [
@@ -348,11 +327,10 @@
    ],
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1000,  # Size of each text chunk in characters\n",
-    "    chunk_overlap=200  # Number of overlapping characters between chunks\n",
+    "    chunk_size=1000,  \n",
+    "    chunk_overlap=200  \n",
     ")\n",
     "\n",
-    "# Split documents into chunks using the configured text splitter\n",
     "split_documents = text_splitter.split_documents(all_documents)\n",
     "split_documents"
    ]
@@ -367,31 +345,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "88b64b04",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.embeddings import OllamaEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
-    "\n",
-    "\"\"\"\n",
-    "Module for working with vector embeddings and vector stores using LangChain components.\n",
-    "\n",
-    "This module provides imports for:\n",
-    "- OllamaEmbeddings: Embedding model from Ollama\n",
-    "- FAISS: Vector store implementation from Facebook AI Research\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d951423d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize OllamaEmbeddings with the specified model for text embedding\n",
     "embedding = OllamaEmbeddings(model=\"nomic-embed-text\")"
    ]
   },
@@ -415,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "9740ac38",
    "metadata": {},
    "outputs": [
@@ -432,9 +402,7 @@
    ],
    "source": [
     "query = \"Who are the authors of attention is all you need?\"\n",
-    "# Perform similarity search in the database and retrieve results\n",
     "retireved_results = db.similarity_search(query)\n",
-    "# Print the content of the first retrieved result\n",
     "print(retireved_results[0].page_content)"
    ]
   }
